reverse and confirm slot
