# booking-service/docs/swagger.json
@@ -754,12 +754,12 @@
                         "required": true
                     },
                     {
-                        "description": "Booking details: type and answers",
+                        "description": "Booking details: type",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.BookSlotInput"
+                            "$ref": "#/definitions/models.ReserveSlotInput"
                         }
                     }
                 ],
@@ -888,12 +888,12 @@
                         "required": true
                     },
                     {
-                        "description": "Booking details (type, phone, answers)",
+                        "description": "Booking details (phone, answers)",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.BookSlotInput"
+                            "$ref": "#/definitions/models.ConfirmSlotInput"
                         }
                     }
                 ],
@@ -1110,12 +1110,12 @@
                         "required": true
                     },
                     {
-                        "description": "Booking details: type and answers",
+                        "description": "Booking details: type",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.BookSlotInput"
+                            "$ref": "#/definitions/models.ReserveSlotInput"
                         }
                     }
                 ],
@@ -1344,28 +1344,6 @@
                 }
             }
         },
-        "models.BookSlotInput": {
-            "type": "object",
-            "required": [
-                "booking_type",
-                "phone_number"
-            ],
-            "properties": {
-                "answers": {
-                    "type": "string"
-                },
-                "booking_type": {
-                    "type": "string",
-                    "enum": [
-                        "online",
-                        "offline"
-                    ]
-                },
-                "phone_number": {
-                    "type": "string"
-                }
-            }
-        },
         "models.CalendarAvailabilityResponse": {
             "type": "object",
             "properties": {
@@ -1378,6 +1356,21 @@
                         "2026-02-10",
                         "2026-02-14"
                     ]
+                }
+            }
+        },
+        "models.ConfirmSlotInput": {
+            "type": "object",
+            "required": [
+                "phone_number"
+            ],
+            "properties": {
+                "answers": {
+                    "type": "string",
+                    "example": "{\"reason\": \"Exam stress\"}"
+                },
+                "phone_number": {
+                    "type": "string"
                 }
             }
         },
@@ -1561,6 +1554,22 @@
             "properties": {
                 "new_slot_id": {
                     "type": "string"
+                }
+            }
+        },
+        "models.ReserveSlotInput": {
+            "type": "object",
+            "required": [
+                "booking_type"
+            ],
+            "properties": {
+                "booking_type": {
+                    "type": "string",
+                    "enum": [
+                        "online",
+                        "offline"
+                    ],
+                    "example": "online"
                 }
             }
         },
